external/bsd/dhcpcd/dist/if-options.h
@@ -37,7 +37,7 @@
 
 /* Don't set any optional arguments here so we retain POSIX
  * compatibility with getopt */
-#define IF_OPTS "bc:def:h:i:kl:m:no:pqr:s:t:u:v:xy:z:ABC:DEF:GI:KLN:O:Q:TVX:Z:"
+#define IF_OPTS "bc:def:h:i:kl:m:no:pqr:s:t:u:v:xy:z:ABC:DEF:GI:KLN:O:Q:TVW:X:Z:"
 
 #define DEFAULT_TIMEOUT		30
 #define DEFAULT_REBOOT		10
@@ -100,6 +100,8 @@ struct if_options {
 
 	size_t blacklist_len;
 	in_addr_t *blacklist;
+	size_t whitelist_len;
+	in_addr_t *whitelist;
 	size_t arping_len;
 	in_addr_t *arping;
 	char *fallback;
